--- a/meal-planner/src/components/calendar/CalendarV2.css
+++ b/meal-planner/src/components/calendar/CalendarV2.css
@@ -20,7 +20,11 @@
     gap: 5px !important;
     justify-content: end;
     font-size: 12px;
+    margin-bottom: 10px;
     .calendarv2--column-key {
+      /* transform: rotate(-40deg) translate(29px,-10px);  */
+      font-size: 20px;
+      color: #9e9e9e;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -28,6 +32,7 @@
       height: 20px;
       width: 60px;
       box-sizing: border-box;
+      text-orientation: upright;
 
       border: 3px transparent dashed;
     }
@@ -35,6 +40,8 @@
       width: 30px;
       display: flex;
       align-items: center;
+      font-size: 20px;
+      color: #9e9e9e;
     }
     .calendarv2--row-key {
       background-color: transparent;
@@ -42,6 +49,8 @@
       justify-content: center;
       align-items: center;
       width: 100px;
+      font-size: 20px;
+      color: #9e9e9e;
       /* height: 100px; */
     }
 
@@ -56,6 +65,22 @@
         height: 60px;
         /* margin: 5px; */
         position: relative;
+        .add-servings {
+          position: absolute;
+          filter: brightness(100%);
+          /* z-index:0; */
+          padding: 20px;
+          top: 15px;
+          z-index: 0;
+          left: 15px;
+          width: 10px;
+          height: 10px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          padding: 15px 14px;
+          background-color: transparent;
+        }
         .subtract-servings {
           position: absolute;
           filter: brightness(100%);
@@ -79,8 +104,9 @@
           align-items: center;
           max-width: 53px;
           position: absolute;
-          top: 0;
-          left: -10px;
+          top: -10px;
+          left: -5px;
+          z-index: 1;
           padding: 2px 10px;
           /* border-radius: 30px; */
           box-shadow: 0px 3px 5px 0px rgb(0, 0, 0);
