--- a/meal-planner/src/components/meals-with-shared-ingredients/MealsWithSharedIngredients.css
+++ b/meal-planner/src/components/meals-with-shared-ingredients/MealsWithSharedIngredients.css
@@ -44,7 +44,7 @@ h2{
   display: flex;
   flex-direction: column;
   gap: 10px;
-  transition: 2s ease-in-out all;
+  /* transition: 2s ease-in-out all; */
   /* background-color: rgb(112, 112, 112)  */
 }
 .recomended-dropdown-content {
